test/files/errors/wrongDeclarationInStruct.jg
test struct {
    int x;
}

_main int () 
{
    uuuu struct_test;
    uuuu->x = 10;
    0 return;
}